fix: checkstyle and spotbugs warnings